--- a/index.html
+++ b/index.html
@@ -182,39 +182,49 @@
         <div class="row">
             <div class="col-md-4 work-card">
                 <div class="card">
-                    <div class="card-img" style="background-image: url(&quot;images/jbrm.jpg&quot;);"></div>
+                    <div class="card-img" style="background-image: url(&quot;img/denmark.jpg&quot;);"></div>
                     <div class="card-content">
                         <div class="card-tags">
-                            <div class="card-tag">Project Management</div>
-                            <div class="card-tag">Front-End</div>
-                            <div class="card-tag">Javascript</div>
+                            <div class="card-tag">Management Consulting</div>
+                            <div class="card-tag">.NET</div>
                             <div class="card-tag">C#</div>
+                            <div class="card-tag">Javascript</div>
                         </div>
-                        <h4>Front-End Insurance</h4>
+                        <div class="card-info">
+                            <h4>Front-End for acquiring and ceding insurance policies from other companies.</h4>
+                            <h6>Senior Developer - IT Financial Services</h6>
+                        </div>
                     </div>
                 </div>
             </div>
             <div class="col-md-4 work-card">
                 <div class="card">
-                    <div class="card-img" style="background-image: url(&quot;images/jbrm.jpg&quot;);"></div>
+                    <div class="card-img" style="background-image: url(&quot;img/montreal.jpg&quot;);"></div>
                     <div class="card-content">
                         <div class="card-tags">
-                            <div class="card-tag text-sm">Project Management</div>
+                            <div class="card-tag text-sm">Management Consulting</div>
                             <div class="card-tag text-sm">Business Rules</div>
                         </div>
-                        <h4>Realtime Data Analytics</h4>
+                        <h4>Undewriting Analytics Engine - Tailor-made insurance coverages and advice for customers.</h4>
+                        <h6>Senior Consultant - IT Financial Services</h6>
                     </div>
                 </div>
             </div>
             <div class="col-md-4 work-card">
                 <div class="card">
-                    <div class="card-img" style="background-image: url(&quot;images/jbrm.jpg&quot;);"></div>
+                    <div class="card-img" style="background-image: url(&quot;img/toronto.jpg&quot;);"></div>
                     <div class="card-content">
                         <div class="card-tags">
-                            <div class="card-tag text-sm">Project Management</div>
-                            <div class="card-tag text-sm">Business Rules</div>
+                            <div class="card-tag text-sm">Management Consulting</div>
+                            <div class="card-tag text-sm">Real-time Analytics</div>
                         </div>
-                        <h4>Realtime Business Rule</h4>
+                        <div class="card-tags">
+                            <div class="card-tag text-sm">Java</div>
+                            <div class="card-tag text-sm">Data Analytics</div>
+                            <div class="card-tag text-sm">Web Services</div>
+                        </div>
+                        <h4>Real-time analytics to provide online insurance quotes.</h4>
+                        <h6>Senior Consultant - IT Financial Services</h6>
                     </div>
                 </div>
             </div>
@@ -222,39 +232,45 @@
         <div class="row">
             <div class="col-md-4 work-card">
                 <div class="card">
-                    <div class="card-img" style="background-image: url(&quot;images/jbrm.jpg&quot;);"></div>
+                    <div class="card-img" style="background-image: url(&quot;img/berlin.jpg&quot;);"></div>
                     <div class="card-content">
                         <div class="card-tags">
-                            <div class="card-tag">Project Management</div>
-                            <div class="card-tag">Front-End</div>
+                            <div class="card-tag">Startup</div>
+                            <div class="card-tag">Entrepreneurship</div>
                             <div class="card-tag">Javascript</div>
-                            <div class="card-tag">C#</div>
+                            <div class="card-tag">RubyOnRails</div>
                         </div>
-                        <h4>In progress</h4>
+                        <h4>Coffee Marketplace (Direct Trade) Roast-Grind-Brew your coffee in your home.</h4>
+                        <h6>Lead Developer</h6>
                     </div>
                 </div>
             </div>
             <div class="col-md-4 work-card">
                 <div class="card">
-                    <div class="card-img" style="background-image: url(&quot;images/jbrm.jpg&quot;);"></div>
+                    <div class="card-img" style="background-image: url(&quot;img/maia.jpg&quot;);"></div>
                     <div class="card-content">
                         <div class="card-tags">
-                            <div class="card-tag text-sm">Project Management</div>
-                            <div class="card-tag text-sm">Business Rules</div>
+                            <div class="card-tag text-sm">Software House</div>
+                            <div class="card-tag text-sm">MES</div>
+                            <div class="card-tag text-sm">C#</div>
                         </div>
-                        <h4>In progress</h4>
+                        <h4>Critical Manufacturing MES, provides maximum agility, visibility and reliability.</h4>
+                        <h6>Software Engineer | Product Team</h6>
                     </div>
                 </div>
             </div>
             <div class="col-md-4 work-card">
                 <div class="card">
-                    <div class="card-img" style="background-image: url(&quot;images/jbrm.jpg&quot;);"></div>
+                    <div class="card-img" style="background-image: url(&quot;img/iramp.jpg&quot;);"></div>
                     <div class="card-content">
                         <div class="card-tags">
-                            <div class="card-tag text-sm">Project Management</div>
-                            <div class="card-tag text-sm">Business Rules</div>
+                            <div class="card-tag text-sm">European Union</div>
+                            <div class="card-tag text-sm">I-Ramp3</div>
+                            <div class="card-tag text-sm">Plug&Play</div>
+                            <div class="card-tag text-sm">P2P</div>
                         </div>
-                        <h4>In progress</h4>
+                        <h4>Optimize manufacturing ramp-up time and data gathering across all machines.</h4>
+                        <h6>Software Engineer | Research & Development Team</h6>
                     </div>
                 </div>
             </div>
