fixed meta tags

--- a/real-cost-of-an-iphone/index.html
+++ b/real-cost-of-an-iphone/index.html
@@ -15,7 +15,8 @@
     <meta property="og:title" content="The real cost of an iPhone" />
     <meta property="og:description" content="Calculate the real cost of an iPhone based on the minimum wage of your country." />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="http://ia.media-imdb.com/images/rock.jpg" />
+    <meta property="og:url" content="http://felipeschmitt.com/real-cost-of-an-iphone/" />
+    <meta property="og:image" content="img/example.jpg" />
 
     <link rel="stylesheet" href="css/normalize.min.css">
     <link rel="stylesheet" href="css/main.css">
@@ -93,7 +94,7 @@
             e=o.createElement(i);r=o.getElementsByTagName(i)[0];
             e.src='//www.google-analytics.com/analytics.js';
             r.parentNode.insertBefore(e,r)}(window,document,'script','ga'));
-            ga('create','UA-XXXXX-X','auto');ga('send','pageview');
+            ga('create','UA-34752114-1','auto');ga('send','pageview');
         </script>
     </body>
     </html>
