--- a/real-cost-of-an-iphone/index.html
+++ b/real-cost-of-an-iphone/index.html
@@ -52,10 +52,10 @@
         <div class="footer-container">
             <footer class="wrapper">
                 <p><strong>Disclaimers:</strong></p>
-                <p>- This website is for informational purposes and it should not be considered as anything else.</p>
                 <p>- iPhone® is a trademark of Apple Inc.</p>
-                <p>- This website does not belong or have been built in any cooperation with Apple.</p>
                 <p>- All iPhone and Apple images used on this micro website belong to Apple.</p>
+                <p>- This website is for informational purposes and it should not be considered as anything else.</p>
+                <p>- This micro website does not belong or has been built by apple.</p>
                 <p>- All prices ($USD) compared by the values announced on Apple US website.</p>
                 <p>- Tax is not being considered for this illustration.</p>
                 <p>- Minimum wage information gathered from <a href="https://en.wikipedia.org/wiki/List_of_minimum_wages_by_country" target="_blank">Wikipedia</a>.</p>
